DD-1444 Allow access to all via dd-dataverse-authenticator (#26)
* Refactored config to comply with new conventions specified in https://dans-knaw.github.io/dans-module-archetype/dans-module-design/\#java-packages

* Moved SwordError and UriRegistry out of the config package, as they have nothing to do with capturing the config.yml

* Moved SwordError and UriRegistry out of the config package, as they have nothing to do with capturing the config.yml

* Lombokified configuration classes

* Restructured config.yml authorization -> userConfig

* Restructured config.yml authorization -> userConfig

* Renamed UserConfig -> UserSettings (for the top-level block) and User -> UserConfig (for user specific config, back to original name)

* Implemented logic for DD-1444

* Extended UserManager to handle default user

* More docs about authentication. WIP

* Extended docs and renamed userSettings to userProfiles

* Refactoring SwordAuthenticator.authenticate

* Allow user profiles to be null

* Expanded unit tests for SwordAuthenticator

* Delegate with basic credentials returning the wrong user name should lead to an exception.