@@ -15,7 +15,7 @@
  */
 package nl.knaw.dans.sword2.health;
 
-import nl.knaw.dans.sword2.core.config.CollectionConfig;
+import nl.knaw.dans.sword2.config.CollectionConfig;
 import nl.knaw.dans.sword2.core.DepositState;
 import nl.knaw.dans.sword2.core.exceptions.NotEnoughDiskSpaceException;
 import nl.knaw.dans.sword2.core.service.FilesystemSpaceVerifier;
@@ -24,6 +24,7 @@ import org.mockito.Mockito;
 
 import java.io.IOException;
 import java.nio.file.Path;
+import java.util.Collections;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
@@ -32,7 +33,7 @@ class DiskSpaceHealthCheckTest {
 
     @Test
     void checkReturnsValidIfNoExceptionIsThrown() {
-        var collection1 = new CollectionConfig("name", "path", Path.of("uploads"), Path.of("deposits"), 100, List.of(DepositState.INVALID));
+        var collection1 = new CollectionConfig("name", "path", Path.of("uploads"), Path.of("deposits"), 100, Collections.emptyList(), List.of(DepositState.INVALID));
         var config = List.of(collection1);
 
         var filesystemSpaceVerifier = Mockito.mock(FilesystemSpaceVerifier.class);
@@ -44,8 +45,8 @@ class DiskSpaceHealthCheckTest {
 
     @Test
     void checkReturnsValidWithMultipleConfigs() throws IOException, NotEnoughDiskSpaceException {
-        var collection1 = new CollectionConfig("name", "path", Path.of("uploads"), Path.of("deposits"), 100, List.of(DepositState.INVALID));
-        var collection2 = new CollectionConfig("name2", "path2", Path.of("uploads2"), Path.of("deposits2"), 100, List.of(DepositState.INVALID));
+        var collection1 = new CollectionConfig("name", "path", Path.of("uploads"), Path.of("deposits"), 100, Collections.emptyList(),List.of(DepositState.INVALID));
+        var collection2 = new CollectionConfig("name2", "path2", Path.of("uploads2"), Path.of("deposits2"), 100, Collections.emptyList(),List.of(DepositState.INVALID));
 
         var config = List.of(collection1, collection2);
 
@@ -57,7 +58,7 @@ class DiskSpaceHealthCheckTest {
 
     @Test
     void checkReturnsInValidIfExceptionIsThrown() throws IOException, NotEnoughDiskSpaceException {
-        var collection1 = new CollectionConfig("name", "path", Path.of("uploads"), Path.of("deposits"), 100, List.of(DepositState.INVALID));
+        var collection1 = new CollectionConfig("name", "path", Path.of("uploads"), Path.of("deposits"), 100, Collections.emptyList(),List.of(DepositState.INVALID));
         var config = List.of(collection1);
 
         var filesystemSpaceVerifier = Mockito.mock(FilesystemSpaceVerifier.class);
@@ -70,8 +71,8 @@ class DiskSpaceHealthCheckTest {
 
     @Test
     void checkReturnsInValidIfExceptionIsThrownButOnlyForOneCollection() throws IOException, NotEnoughDiskSpaceException {
-        var collection1 = new CollectionConfig("name", "path", Path.of("uploads"), Path.of("deposits"), 100, List.of(DepositState.INVALID));
-        var collection2 = new CollectionConfig("name2", "path2", Path.of("uploads2"), Path.of("deposits2"), 100, List.of(DepositState.INVALID));
+        var collection1 = new CollectionConfig("name", "path", Path.of("uploads"), Path.of("deposits"), 100, Collections.emptyList(), List.of(DepositState.INVALID));
+        var collection2 = new CollectionConfig("name2", "path2", Path.of("uploads2"), Path.of("deposits2"), 100, Collections.emptyList(),List.of(DepositState.INVALID));
 
         var config = List.of(collection1, collection2);
 
